--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "Web site for ATcron AB",
   "private": true,
   "main": "dist/index.js",
+  "homepage": ".",
   "dependencies": {
     "@material-ui/core": "4.3.2",
     "@material-ui/icons": "4.2.1",
