--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
     "google-map-react": "^1.1.5",
     "history": "4.9.0",
     "moment": "2.24.0",
-    "node-sass": "4.14.1",
     "nouislider": "14.0.2",
     "prop-types": "15.7.2",
     "react": "16.9.0",
@@ -31,19 +30,15 @@
     "@babel/plugin-proposal-class-properties": "7.5.5",
     "@babel/preset-env": "7.5.5",
     "@babel/preset-react": "7.0.0",
-    "eslint-config-prettier": "6.0.0",
-    "eslint-plugin-prettier": "3.1.0",
-    "eslint-plugin-react": "7.14.3",
-    "gulp": "4.0.2",
-    "gulp-append-prepend": "1.0.8",
-    "prettier": "1.18.2"
+    "prettier": "1.18.2",
+    "sass": "^1.45.0"
   },
   "optionalDependencies": {
     "typescript": "3.5.3"
   },
   "scripts": {
     "start": "react-scripts start",
-    "build": "react-scripts build && gulp licenses",
+    "build": "react-scripts build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject",
     "lint:check": "eslint . --ext=js,jsx;  exit 0",
